# light-md-editor

./: .gitignore  README.md  README.zh.md
.github/workflows/: build.yml
app/: .taurignore  README-build.md  package-lock.json  package.json
app/docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: gen_icons.py
app/src-tauri/permissions/: default.toml
app/src-tauri/src/: main.rs
app/tests/: bridge.test.mjs  qa-bugfix-nsis-report.md  qa-bugfix-report.md  qa-report.md  repro-help-close.mjs  validate-config.mjs  validate-tauri-conf-full.py  validate-tauri-conf-regression.mjs
app/web/: i18n.js  index.html
